# GameDev-DeepEngine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: git.cmake  presets.cmake  vcpkg.cmake
cmake/functions/: log.cmake
src/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/gui/public/: sdl2_cleanup.hpp
src/sdl2/: CMakeLists.txt
src/sdl2/public/: SDL2_display_image.c  SDL2_health_bar.c  SDL2_sprite_anim.c
utils/: makefile_help.py
